
cmake_minimum_required(VERSION 3.19)

add_subdirectory(blink)
add_subdirectory(clock_report)
add_subdirectory(dma_i2c_oled)
add_subdirectory(game_snake)
add_subdirectory(io)
add_subdirectory(julia)
add_subdirectory(mco)
add_subdirectory(oled_cube)
add_subdirectory(oled_uGUI_hello_world)
add_subdirectory(qspi)
add_subdirectory(reset)
add_subdirectory(systick)
add_subdirectory(timer_generated)
add_subdirectory(timer_tui)
add_subdirectory(usart_cube)
add_subdirectory(usb_mtp)

